# deepinfra-client-rs

./: Cargo.toml  LICENSE  README.md  readme.md
src/: audio_transcription.rs  chat_completition.rs  client.rs  lib.rs
