[package]
name = "deepinfra-client-rs"
version = "0.1.0"
edition = "2021"
publish = true
license = "MIT OR Apache-2.0"
authors = ["Simone Romano <simoneromano@protonmail.ch>"]
description = "A Rust client for the Deepinfra API"
readme = "readme.md"
exclude = [
    ".docker/*",
    ".licence/*",
    ".github/*",
    "readme.md",
    ".gitignore",
    "docker-compose.yml",
]
homepage = "https://github.com/simoneromano96/deepinfra-client-rs"
repository = "https://github.com/simoneromano96/deepinfra-client-rs"
documentation = "https://docs.rs/crate/deepinfra-client-rs/latest"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["chat_completition", "audio_transcription"]
chat_completition = []
audio_transcription = []

[dependencies]
bon = "3"
http = "1"
# hyper = { version = "1.3.1", features = ["full"] }
# TODO: Change reqwest to hyper
# hyper = { version = "1.3.1", features = ["client"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
trait-variant = "0.1"
url = "2"
